# Visual

./: .gitattributes  .gitignore  README.md  desktop.ini
ML/Code/1_linear_regression/: linear_regression.py
ML/Code/2_logistic_regression/: logistic_regression.py
ML/Note/10_条件随机场/: 10_条件随机场.md
ML/Note/11_聚类方法/: 11_聚类方法.md
ML/Note/12_降维方法(主成分分析)/: 12_主成分分析.md
ML/Note/1_机器学习概论/: 1_机器学习概论.md
ML/Note/1_机器学习概述/: 机器学习概述.md
ML/Note/2_感知机/: 2_感知机.md
ML/Note/2_线性回归/: 线性回归.md
ML/Note/3_KNN/: 3_KNN.md
ML/Note/3_逻辑回归/: 逻辑回归.md
ML/Note/4_决策树/: 决策树.md
ML/Note/4_朴素贝叶斯/: 4_朴素贝叶斯.md
ML/Note/5_决策树/: 5_决策树.md
ML/Note/5_支持向量机/: 支持向量机.md
ML/Note/6_逻辑斯蒂回归/: 6_逻辑斯蒂回归.md
ML/Note/7_K近邻/: K近邻.md
ML/Note/7_支持向量机/: 7_支持向量机.md
ML/Note/7_聚类方法/: 聚类方法.md
ML/Note/8_EM算法/: 8_EM算法.md
ML/Note/8_聚类方法/: 聚类方法.md
ML/Note/9_隐马尔可夫模型/: 9_隐马尔可夫模型.md
OpenCV-C++/Code/0_Test/: test.cpp
OpenCV-C++/Code/10_Mask/: Project_10.cpp
OpenCV-C++/Code/11_Picture Calc/: Project_11.cpp
OpenCV-C++/Code/12_Threshold/: Project_12.cpp
OpenCV-C++/Code/13_LUT/: Project_13.cpp
OpenCV-C++/Code/16_Pyramid/: Project_16.cpp
OpenCV-Python/Video_SoftWare/: VideoCap.ini
PCL-C++/Code/1_PCD_Test/PCD_Read_Test/: CMakeLists.txt  main.cpp
PCL-C++/Code/3_Radius_Tree_Test/: CMakeLists.txt  main.cpp
PCL-C++/Code/6_RANSAC_Test/: CMakeLists.txt  main.cpp
PCL/Code/5_PCL_Segment/KMeans++/: CMakeLists.txt  kmeans_cluster_1.pcd  kmeans_cluster_2.pcd  kmeans_cluster_3.pcd  kmeans_cluster_4.pcd  kmeans_cluster_5.pcd  kmeans_cluster_6.pcd  kmeans_cluster_7.pcd  test.pcd
PCL/Code/5_PCL_Segment/KMeans++/include/: Kmeans.h
PCL/Code/5_PCL_Segment/KMeans++/src/: Kmeans.cpp  main.cpp
Yolov5/Code/: split.py  xml_to_yolo.py
(+342 files in other folders)
