cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_PROJECT)
find_package(PCL 1.14 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(pcd_read_test main.cpp)
target_link_libraries(pcd_read_test ${PCL_LIBRARIES})